# gogoo-panel-datetime

./: .anjuta_sym_db.db  .gitignore  CMakeLists.txt  Makefile.in  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: CMakeLists.txt  Makefile.in  gogoo-panel-datetime.desktop.in
data/theme/: CMakeLists.txt  Makefile.in
po/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.in  com.meego.UX.Shell.Panels.datetime.service.in  date-time.schemas.in  meego-panel-date-time.c  mnp-button-item.c  mnp-clock-area.c  mnp-clock-tile.c  mnp-datetime.c  mnp-shell.c  mnp-utils.c  mnp-utils.c~  mnp-utils.h  mnp-world-clock.c
